<resources>


    <!-- General -->
    <string name="app_name">SmartHome</string>
    <string name="confirm_btn">Confirm</string>
    <string name="cancel_btn">Cancel</string>
    <string name="loading">loading...</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <!-- Colors -->
    <string name="color_white">White</string>
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_purple">Purple</string>

    <!-- Main Toolbar -->
    <string name="settings_opt">Settings</string>
    <string name="addroom_opt">Add Room</string>
    <string name="addroutine_opt">Add Routine</string>
    <string name="about_opt">About Us</string>

    <!-- Edit Room Toolbar -->
    <string name="rename_opt">Rename Room</string>
    <string name="adddevice_opt">Add Device</string>
    <string name="rmdevice_opt">Remove Device</string>

    <!-- Home View -->
    <string name="home_fragment">Home</string>
    <string name="home_item_icon">home room icon</string>
    <string name="home_no_connection">Could not load room list. Please check your internet connection and try again.</string>
    <string name="home_list_empty">No rooms registered. To add new room click the options panel in the top right corner, then \'add room\'. To add a device you must first have a room for it.</string>

    <!-- Routines View -->
    <string name="routines_fragment">Routines</string>
    <string name="routines_no_connection">Could not load routines list. Please check your internet connection and try again.</string>
    <string name="routines_list_empty">No routines registered. To add new routine click the options panel in the top right corner, then \'add routine\'.</string>
    <string name="routines_item_icon">routine item icon</string>
    <string name="routines_item_start">Run</string>
    <string name="routine">Routine</string>
    <string name="executed">executed</string>
    <string name="failed">failed</string>

    <!-- Favourites View -->
    <string name="favourites_fragment">Favourites</string>
    <string name="favourites_no_connection">Could not load favourites list. Please check your internet connection and try again.</string>
    <string name="favourites_list_empty">No favourite devices registered. To add new favourite first add a device to a room and then click the heart symbol in the device settings.</string>
    <string name="favourites_item_icon">favourite device icon</string>
    <string name="favourites_item_heart">favourite heart icon</string>

    <!-- Add Room View -->
    <string name="add_room_img_desc">New room icon</string>
    <string name="add_room_text_view">ADD ROOM</string>
    <string name="add_room_hint">Enter name</string>

    <!-- Room View -->
    <string name="room_view_title">Edit Room</string>
    <string name="room_devices_list_empty">No devices registered. To add a new device click the options panel in the top right corner, then \'add device\'.</string>
    <string name="room_no_connection">Could not load devices list. Please check your internet connection and try again.</string>
    <string name="room_item_icon">device icon</string>
    <string name="room_item_heart">device heart icon</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Device View -->
    <string name="device_no_connection">Could not retrieve device data. Please check your internet connection and try again.</string>

    <!-- Lamp View -->
    <string name="lamp_dimmer">Dimmer</string>
    <string name="lamp_color">Color</string>
    <string name="lamp_room_title">Room</string>

    <!-- Vacuum View  -->
    <string name="pause_vacuum">Pause</string>
    <string name="continue_vacuum">Continue</string>
    <string name="return_vacuum">Return Base Charge</string>
    <string name="leave_vacuum">Leave Base Charge</string>
    <string name="act_vacuum">Vacuum</string>
    <string name="act_mop">Mop</string>
    <string name="vaccum_icon">Vacuum icon</string>


    <!-- Blind View  -->
    <string name="open_blind">Open Blind</string>
    <string name="close_blind">Close Blind</string>
    <string name="blinds_icon">Blinds icon</string>

    <!-- Door View  -->
    <string name="open_door">Open Door</string>
    <string name="close_door">Close Door</string>
    <string name="lock_door">Lock Door</string>
    <string name="unlock_door">Unlock Door</string>
    <string name="door_icon">Door icon</string>

    <!-- About Us View -->
    <string name="about_us_title">About Us</string>
    <string name="developer_names">Santiago Reyes, Lucia Karpovich, Felipe Oliver, Manuel Tarradellas</string>


    <!--    Preferences -->
    <string name="pref_dark_theme">Dark theme (Unfinished, needs restart)</string>
    <string-array name="ArrayInterval">
        <item>@string/Short</item>
        <item>@string/Medium</item>
        <item>@string/Long</item>
    </string-array>

    <string name="Short">1 min</string>
    <string name="Medium">30 min</string>
    <string name="Long">60 min</string>
    <string name="Interval">Notification interval (Restart Required)</string>
    <string name="activate_dev_not">Activate Device Notifications</string>


    <string name="Blinds">Blinds</string>
    <string name="UpDown">Up/Down</string>
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    <string name="SuccessBlindsDown">Success! Blind is now Down.</string>
    <string name="SuccessBlindsUp">Success! Blind is now Up.</string>

    <string name="Ac">Air Conditioner</string>
    <string name="OnOff" translatable="false">On/Off</string>
    <string name="On" translatable="false">On</string>
    <string name="Off" translatable="false">Off</string>
    <string name="Temperature">Temperature</string>
    <string name="VerticalSwing">Vertical swing</string>
    <string name="HorizontalSwing">Horizontal swing</string>
    <string name="FanSpeed">Fan speed</string>
    <string name="AcMode">Mode</string>
    <string name="Cool">Cool</string>
    <string name="Heat">Heat</string>
    <string name="Fan">Fan</string>
    <string name="VSwingSuccess">Success! Vertical Swing has changed.</string>
    <string name="HSwingSuccess">Success! Horizontal Swing has changed.</string>
    <string name="FanSpeedSuccess">Success! Fan Speed has changed.</string>
    <string name="AcModeSuccess">Success! Ac Mode has changed.</string>

    <string name="SuccessMsgOnOff">Success! Device is now </string>
    <string name="OnM">On</string>
    <string name="OffM">Off</string>
    <string name="SuccessMsgTemp">Success! Temperature has changed.</string>

    <string name="Door">Door</string>
    <string name="OpenClose">Open the door</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Lock">Lock</string>
    <string name="Unlock">Unlock</string>
    <string name="LockUnlock">Lock the Door</string>
    <string name="SuccessMsgDoor">Success! The door is now </string>
    <string name="OpenMsg">Open.</string>
    <string name="CloseMsg">Closed.</string>
    <string name="LockMsg">Locked.</string>
    <string name="UnlockMsg">Unlocked.</string>


    <string name="Lamp">Lamp</string>
    <string name="Brightness">Brightness</string>
    <string name="ColorPicker">Color Picker</string>
    <string name="SuccessMsgBright">Success! Brightness has successfully changed.</string>
    <string name="SuccessMsgCol">Success! The lamp color has successfully changed.</string>

    <!--<string name="Oven">Oven</string>-->
    <!--<string name="Eco" translatable="false">Eco</string>-->
    <!--<string name="Normal">Normal</string>-->
    <!--<string name="Large">Large</string>-->
    <!--<string name="ConvectionMode">Convection mode</string>-->
    <!--<string name="Bottom">Bottom</string>-->
    <!--<string name="Top">Top</string>-->
    <!--<string name="Conventional">Conventional</string>-->
    <!--<string name="HeatMode">Heat mode</string>-->
    <!--<string name="GrillMode">Grill Mode</string>-->

    <!--<string name="SuccessCMode">Success! Convection mode has successfully changed.</string>-->
    <!--<string name="SuccessGMode">Success! Grill mode has successfully changed.</string>-->
    <!--<string name="SuccessHMode">Success! Heat mode has successfully changed.</string>-->


    <!--<string name="Refrigerator">Refrigerator</string>-->
    <!--<string name="FreezerTemperature">Freezer temperature</string>-->
    <!--<string name="Party">Party</string>-->
    <!--<string name="Vacations">Vacations</string>-->
    <!--<string name="SuccessFMode">Success! Fridge mode has successfully changed.</string>-->
    <!--<string name="Default">Default</string>-->

    <string name="Vacuum">Vacuum</string>

    <string name="Speaker">Speaker</string>

    <string name="Alarm">Alarm</string>
    <string name="ColumnsAmount">Columns amount</string>
    <string name="ChangeMessage">A device has been changed!</string>
</resources>
