<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DevicesViews.DoorActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doorBackTextView"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/device_no_connection"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="266dp"
                android:contentDescription="@string/door_icon"
                app:srcCompat="@drawable/door" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <ToggleButton
                android:id="@+id/doorOpenToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="@string/open_door"
                android:textOn="@string/close_door" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <ToggleButton
                android:id="@+id/doorLockToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="@string/lock_door"
                android:textOn="@string/unlock_door" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>